style.css
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');

:root{
    --red: hsl(14, 86%, 42%);
    --green: hsl(159, 69%, 38%);
    --rose-50: hsl(20, 50%, 98%);
    --rose-100: hsl(13, 31%, 94%);
    --rose-300: hsl(14, 25%, 72%);
    --rose-400: hsl(7, 20%, 60%);
    --rose-500: hsl(12, 20%, 44%);
    --rose-900: hsl(14, 65%, 9%);
}

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    /* outline: 2px solid red; */
}

body{
    width: 100%;
    height: 100vh;
    background-color: var(--rose-50);
    font-family: "Red Hat Text";
}

.main {
    padding: 30px;
    width: 80%;
    height: auto;
    position: relative;
    margin: 50px auto;
    display: flex;
    justify-content: space-between;
    gap: 3rem;
}

.desserts {
    width: 70%;
}

.desserts h1 {
    padding-bottom: 30px;
    color: var(--rose-900);
}

.products-grid {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
}

.product-image-container {
    width: 100%;
}

.product-image-container img,
.product-image-container picture {
    width: 100%;
    border-radius: 10px;
}


.add-to-cart-button{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 8px 20px;
    color: var(--rose-900);
    font-family: "Red Hat Text";
    font-weight: 550;
    border: 0.5px solid var(--rose-500);
    border-radius: 20px;
    cursor: pointer;
    position: relative;
    top: -8%;
    left: 50%;
    transform: translate(-50%);
}


.add-to-cart-button:hover {
    color: var(--red);
    border: 0.5px solid var(--red);
}

.image-cart-button {
    padding-right: 5px;
}


.main-product {
    color: var(--rose-400);
    font-size: 0.85rem;
    line-height: 1.7rem;
}



.full-product {
    color: var(--rose-900);
    font-weight: 500;
}

.product-price {
    color: var(--red);
    font-weight: 500;
}

.cart {
    width: 30%;
    height: auto;
}

.cart-empty img {
    margin: 20px 0px;
    position: relative;
    left: 50%;
    transform: translate(-50%);
}

.cart-empty p {
    color: var(--rose-500);
    text-align: center;
    font-size: 0.9rem;
}

.cart h3 {
    color: var(--red);
}

.cart-with-items {
    width: 90%;
    display: none;
}

.added-items {
    padding: 15px 0px;
    
}

.modal-flex-container{
    display: flex;
    align-items: center;
    column-gap: 2rem;
}

.modal-flex-container .product-image-container{
    width: 40px;
}

.modal-flex-container .product-image-container img{
    width: 100%;
}

.cart-items-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}


.remove-item img{
    width: 16px;
    height: 16px;
    padding: 3px;
    cursor: pointer;
    border: 1px solid var(--rose-300);
    border-radius: 50%;
}

.remove-item img:hover{
    border: 1px solid var(--rose-900);
    filter: invert(27%) sepia(78%) saturate(5000%) hue-rotate(14deg) brightness(13%) contrast(85%);
}

.total {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 10px 0px;
}

.total p {
    color: var(--rose-500);
}
.total h1 {
    color: var(--rose-900);
}

.carbon-neutral {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 50px 0px;
}

.carbon-neutral img {
    padding-right: 15px;
}

.carbon-neutral p {
    color: var(--rose-400);
}

.carbon-neutral span {
    color: var(--rose-500);
    font-weight: 500;
}

.order-button{
    width: 100%;
    padding: 16px 0px;
    background-color: var(--red);
    color: var(--rose-100);
    border: none;
    border-radius: 30px;
    font-weight: 600;
    font-size: 1rem;
    font-family: "Red Hat Text";
    cursor: pointer;
}

.order-button:hover{
    background-color: hsl(14, 90%, 20%);
}

.order-button:active{
    background-color: hsl(14, 93%, 55%);
}


.pop-up-container{
    background-color: rgba(0, 0, 0, 0.719);
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 0%;
    left: 0%;
    right: 0%;
    display: none;
}

.pop-up-details {
    width: 30%;
    height: auto;
    background-color: var(--rose-50);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 20px;
    padding: 30px;
}

/* ================ Media Queries ============================ */
/* ================ Mobile Device ============================ */
@media (max-width : 480px){
    .main {
        padding: 10px;
        width: 90%;
        margin: 20px auto;
        display: block;
    }
    
    .desserts {
        width: 100%;
    }
    
    .desserts h1 {
        padding-bottom: 20px;
    }
    
    .products-grid {
        grid-template-columns:  1fr;
    }
      
    .add-to-cart-button{
        padding: 12px 25px;
    }

    
    .image-cart-button {
        padding-right: 5px;
    }
    
    .cart {
        width: 90%;
        margin: 50px auto;
    }
    
    
    .cart-with-items {
        width: 100%;
    }
    
    .added-items {
        padding: 15px 0px;
        
    }
    
    .carbon-neutral {
        margin: 30px 0px;
    }
    
    
    .pop-up-container{
        position: fixed;
    }
    
    .pop-up-details {
        width: 100%;
        padding: 20px;
    }
    
}

/* ================ Tablet Device ============================ */
@media (min-width : 481px) and (max-width :767px){
    .main {
        padding: 10px;
        width: 90%;
        margin: 20px auto;
        display: block;
    }
    
    .desserts {
        width: 100%;
    }
    
    .desserts h1 {
        padding-bottom: 20px;
    }
    
    .products-grid {
        grid-template-columns: repeat(2, 1fr);
    }
      
    .add-to-cart-button{
        padding: 12px 25px;
    }

    
    .image-cart-button {
        padding-right: 5px;
    }
    
    .cart {
        width: 70%;
        margin: 50px auto;
    }
    
    
    .cart-with-items {
        width: 100%;
    }
    
    .added-items {
        padding: 15px 0px;
        
    }
    
    .carbon-neutral {
        margin: 30px 0px;
    }
    
    
    .pop-up-container{
        position: fixed;
    }
    
    .pop-up-details {
        width: 100%;
        padding: 20px;
    }
    
}

/* ================ Small Laptops======================== */
@media (min-width : 768px) and (max-width :991px){
    .main {
        padding: 10px;
        width: 90%;
        margin: 20px auto;
        display: block;
    }
    
    .desserts {
        width: 100%;
    }
    
    .desserts h1 {
        padding-bottom: 20px;
    }
    
      
    .add-to-cart-button{
        padding: 12px 25px;
    }

    
    .image-cart-button {
        padding-right: 5px;
    }
    
    .cart {
        width: 60%;
        margin: 50px auto;
    }
    
    
    .cart-with-items {
        width: 100%;
    }
    
    .added-items {
        padding: 15px 0px;
        
    }
    
    .carbon-neutral {
        margin: 30px 0px;
    }
    
    
    .pop-up-container{
        position: fixed;
    }
    
    .pop-up-details {
        width: 60%;
        padding: 20px;
    }
    
}


/* ================ Small Laptops======================== */
@media (min-width : 992px) and (max-width : 1199px){
    .main {
        padding: 10px;
        width: 90%;
        margin: 20px auto;
    }
    
    .desserts {
        width: 100%;
    }
    
    .desserts h1 {
        padding-bottom: 20px;
    }
    
    .products-grid{
        grid-template-columns: repeat(2, 1fr);
    }
      
    .add-to-cart-button{
        padding: 12px 25px;
    }

    
    .image-cart-button {
        padding-right: 5px;
    }
    
    .cart {
        width: 60%;
        margin: 50px auto;
    }
    
    
    .cart-with-items {
        width: 100%;
    }
    
    .added-items {
        padding: 15px 0px;
        
    }
    
    .carbon-neutral {
        margin: 30px 0px;
    }
    
    
    .pop-up-container{
        position: fixed;
    }
    
    .pop-up-details {
        width: 50%;
        padding: 20px;
    }
    
}

